--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -6,7 +6,7 @@ name: Update_DB
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
-    - cron: '15 * * * *'
+    - cron: '0 */6 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -37,4 +37,4 @@ jobs:
               git config user.email "73717764+grummble-ai@users.noreply.github.com"
               git add -u
               git commit -m "Updated json data (raw and analyzed) on `date` with GitHub Actions" || echo "Commit didn't work"
-              git push origin master || echo "Pushing didn't work"
+              git push origin main || echo "Pushing didn't work"
