--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -36,5 +36,5 @@ jobs:
               git config user.name "grummble-ai"
               git config user.email "73717764+grummble-ai@users.noreply.github.com"
               git add -u
-              git commit -m "Updated json data (raw and analyzed) on `date` with GitHub Actions" || echo "Commit didn't work"
+              git commit -m "Updated with GitHub Actions" || echo "Commit didn't work"
               git push origin main || echo "Pushing didn't work"
