Fetch data twice a day!

--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -6,8 +6,7 @@ name: Update_DB
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
-    - cron: '0 */6 * * *'
-
+    - cron: '00 01,13 * * *'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
