--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -28,7 +28,8 @@ jobs:
               pip install -r requirements.txt
           - name: execute python script # run the run.py to get the latest data
             run: |
-              python update_db.py
+              python skillgems_update_db.py
+              python sextants_update_db.py
               
           - name: Commit and Push Changes
             run: |
