--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -26,11 +26,14 @@ jobs:
             run: |
               python -m pip install --upgrade pip
               pip install -r requirements.txt
-          - name: execute python script # run the run.py to get the latest data
+          - name: execute python script skillgems # run the run.py to get the latest data
             run: |
-              python ./utility/app1/skillgems_update_db.py
-              python ./utility/app2/sextants_update_db.py
-              
+              python skillgems_update_db.py
+            working-directory: ./utility/app1
+          - name: execute python script sextants # run the run.py to get the latest data
+            run: |
+              python sextants_update_db.py
+            working-directory: ./utility/app2
           - name: Commit and Push Changes
             run: |
               git config user.name "grummble-ai"
