--- a/.github/workflows/update_db.yml
+++ b/.github/workflows/update_db.yml
@@ -23,9 +23,26 @@ jobs:
             with:
               python-version: 3.x #install the python needed
               cache: 'pip' # caching pip dependencies 
-          - name: Install dependencies
-            run: | 
+              
+          - uses: actions/cache@master
+            id: cache
+            with:
+              path: ${{ env.pythonLocation}}/lib/python3.11.1/site-packages/*
+              key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+              restore-keys: |
+                ${{ runner.os }}-pip-
+                ${{ runner.os }}-
+
+          - name: Install Dependencies
+            if: steps.cache.outputs.cache-hit != 'true'
+            run: |
+              echo "Installing dependencies and caching them."
               pip install -r requirements.txt
+      
+          #- name: Install dependencies
+          #  run: | 
+          #    pip install -r requirements.txt
+              
           - name: execute python script skillgems # run the run.py to get the latest data
             run: |
               python ./utility/app1/skillgems_update_db.py
