--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -24,16 +24,16 @@ jobs:
               python-version: 3.11 #install the python needed
               cache: 'pip' # caching pip dependencies 
               
-          - uses: actions/cache@v3
-            id: cache
-            with:
-              path: ~/.cache/pip
-              key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-              restore-keys: |
-                ${{ runner.os }}-pip-
+          # - uses: actions/cache@v3
+          #   id: cache
+          #   with:
+          #     path: ~/.cache/pip
+          #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          #     restore-keys: |
+          #       ${{ runner.os }}-pip-
 
           - name: Install Dependencies
-            if: steps.cache.outputs.cache-hit != 'true'
+          #   if: steps.cache.outputs.cache-hit != 'true'
             run: |
               echo "Installing dependencies and caching them."
               pip install -r requirements.txt
