--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -32,11 +32,16 @@ jobs:
           #     restore-keys: |
           #       ${{ runner.os }}-pip-
 
+          - name: Install Dependencies (ortools workaround)
+          #   if: steps.cache.outputs.cache-hit != 'true'
+            run: |
+              echo "Installing ortools as a workaround."
+              pip install ortools -f https://pypi.org/project/ortools/9.3.10459/
+              
           - name: Install Dependencies
           #   if: steps.cache.outputs.cache-hit != 'true'
             run: |
               echo "Installing dependencies and caching them."
-              pip install ortools -f https://pypi.org/project/ortools/9.3.10459/
               pip install -r requirements.txt
       
           #- name: Install dependencies
@@ -46,6 +51,7 @@ jobs:
           - name: execute python script skillgems # run the run.py to get the latest data
             run: |
               python update_data.py
+              
           - name: Commit and Push Changes
             run: |
               git config user.name "grummble-ai"
