--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -6,7 +6,7 @@ name: Update_data
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
-    - cron: '00 01,13 * * *' # regular job (1pm & 1am): '00 01,13 * * *'
+    - cron: '*/5 * * * *' # regular job (1pm & 1am): '00 01,13 * * *' // every 5 minutes: */5 * * * *
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
