--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -32,11 +32,11 @@ jobs:
           #     restore-keys: |
           #       ${{ runner.os }}-pip-
           
-          - name: Install Dependencies (ortools workaround)
-          #   if: steps.cache.outputs.cache-hit != 'true'
-            run: |
-              echo "Installing ortools as a workaround."
-              pip install ortools -f https://pypi.org/project/ortools/9.3.10459/
+#          - name: Install Dependencies (ortools workaround)
+#          #   if: steps.cache.outputs.cache-hit != 'true'
+#            run: |
+#              echo "Installing ortools as a workaround."
+#              pip install ortools -f https://pypi.org/project/ortools/9.3.10459/
               
           - name: Install Dependencies
           #   if: steps.cache.outputs.cache-hit != 'true'
