--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ utility/app2/sextant_raw_data_xlsx_to_json.py
 venv/
 venv_23_05_10/
 data/
+1.1 update.xlsx
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
