--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ key-to-toml.py
 utility/app2/sextant_raw_data_xlsx_to_json.py
 venv/
 venv_23_05_10/
+data/
 1.1 update.xlsx
 
 # Byte-compiled / optimized / DLL files
