--- a/.github/workflows/update_gem_data.yml
+++ b/.github/workflows/update_gem_data.yml
@@ -42,7 +42,7 @@ jobs:
             run: |
               git config user.name "grummble-ai"
               git config user.email "73717764+grummble-ai@users.noreply.github.com"
-              git add -u "Add skill gem data with GitHub Actions" || echo "Adding didn't work"
+              git add -u || echo "Adding didn't work"
               git commit -m "Commit skill gem data with GitHub Actions" || echo "Commit didn't work"
               git push -f origin main "Push skill gem data with GitHub Actions" || echo "Pushing didn't work"
               
