--- a/.github/workflows/update_gem_data.yml
+++ b/.github/workflows/update_gem_data.yml
@@ -19,9 +19,9 @@ jobs:
           - name: checkout repo content
             uses: actions/checkout@v4 # checkout the repository content to github runner.
           - name: setup python
-            uses: actions/setup-python@v4
+            uses: actions/setup-python@v5
             with:
-              python-version: 3.10 #install the python needed
+              python-version: '3.10' 
               cache: 'pip' # caching pip dependencies 
 
           - name: Install Dependencies
